--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -7,8 +7,8 @@
   </div>
 
   <div class="form-check mb-2">
-    <input class="form-check-input" type="checkbox" value="{{showLabels}}" id="showLabels"
-           (click)="toggleLabels(!showLabels)">
+    <input class="form-check-input" type="checkbox" [checked]="selectedNetwork.showLabels" id="showLabels"
+           (click)="toggleLabels(!selectedNetwork.showLabels)">
     <label class="form-check-label" for="showLabels">
       {{'SIDEBAR_EDIT_CB_LABELS' | translate}}
     </label>
@@ -305,20 +305,25 @@
       <div class="form-row">
 
         <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
-        <input type="text" class="form-control mb-2" id="highlightNodesHex" name="highlightNodesHex"
+        <input type="text" class="form-control mb-2 col-10" id="highlightNodesHex" name="highlightNodesHex"
                placeholder="#0000ff" [(ngModel)]="highlightNodes">
+        <span class="ml-2 mb-2 col badge badge-pill border" [ngStyle]="{'background-color': highlightNodes}">
+          &nbsp;
+        </span>
 
         <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
-        <input type="text" class="form-control mb-2" id="highlightEdgesHex" name="highlightEdgesHex"
+        <input type="text" class="form-control mb-2 col-10" id="highlightEdgesHex" name="highlightEdgesHex"
                placeholder="#ff00ff" [(ngModel)]="highlightEdges">
-
+        <span class="ml-2 mb-2 col badge badge-pill border" [ngStyle]="{'background-color': highlightEdges}">
+          &nbsp;
+        </span>
         <label for="highlightDuration">{{'SIDEBAR_EDIT_LABEL_DURATION' | translate}}</label>
         <input type="number" min="0" step="1" class="form-control mb-2" id="highlightDuration"
                name="highlightDuration"
                placeholder="4000" [(ngModel)]="highlightDuration">
 
         <button type="button" class="btn btn-outline-success btn-block mb-3"
-                (click)="graphService.setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)">
+                (click)="setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)">
           {{'SIDEBAR_EDIT_BTN_SUBMIT' | translate}}</button>
 
       </div>
