--- a/src/app/components/main-stats/main-stats.component.html
+++ b/src/app/components/main-stats/main-stats.component.html
@@ -5,7 +5,7 @@
 
   <h3>{{'MAIN_STATS_GRAPH_INFO_TITLE' | translate}} "{{selectedNetwork.networkInformation.name}}"</h3>
 
-  <div class="row mt-3">
+  <div class="row mt-3 p-2">
     <div class="col-3">
       <h6>{{'MAIN_STATS_GRAPH_INFO_NODES' | translate}}: {{selectedNetwork.nodeCount}}</h6>
       <h6>{{'MAIN_STATS_GRAPH_INFO_EDGES' | translate}}: {{selectedNetwork.edgeCount}}</h6>
