--- a/src/app/components/sidebar-compare/sidebar-compare.component.html
+++ b/src/app/components/sidebar-compare/sidebar-compare.component.html
@@ -1,3 +1,42 @@
 <div class="p-2">
-  <p>sidebar-compare works!</p>
+
+  <h5>{{'SIDEBAR_COMPARE_TITLE' | translate}}</h5>
+
+  <div class="text-center p-4">
+    <fa-icon [icon]="faTools" [size]="'6x'"></fa-icon>
+    <p class="mt-2">{{'SIDEBAR_COMPARE_TEASER' | translate}}</p>
+  </div>
+
+  <hr>
+
+  <h5>{{'SIDEBAR_COMPARE_ABOUT' | translate}}</h5>
+
+  <div class="row ml-1 mr-1 p-1 mt-2">
+    <div class="col-1">
+      <fa-icon [icon]="faThumbsUp" [size]="'lg'"></fa-icon>
+    </div>
+    <div class="col-11">
+      <p>{{'SIDEBAR_COMPARE_ABOUT_1' | translate}}</p>
+    </div>
+  </div>
+  <div class="row ml-1 mr-1 p-1">
+    <div class="col-1">
+      <fa-icon [icon]="faUserGraduate" [size]="'lg'"></fa-icon>
+    </div>
+    <div class="col-11">
+      <p>{{'SIDEBAR_COMPARE_ABOUT_2' | translate}}</p>
+    </div>
+  </div>
+    <div class="row ml-1 mr-1 p-1">
+    <div class="col-1">
+      <fa-icon [icon]="faComments" [size]="'lg'"></fa-icon>
+    </div>
+    <div class="col-11">
+      <p>{{'SIDEBAR_COMPARE_ABOUT_3_1' | translate}}
+        <a href="#" target="_blank"><b>Florian Auer</b></a>
+        {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
+      </p>
+    </div>
+  </div>
+
 </div>
