[DONE] hiding checkbox if graph is not visible, also hiding gradient or chart if a change has been made to any of the mappings, not regarding which mapping is displayed within the sidebar

--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -6,7 +6,7 @@
     <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
   </div>
 
-  <div class="form-check mb-2">
+  <div class="form-check mb-2" *ngIf="showLabelCheckbox">
     <input class="form-check-input" type="checkbox" [checked]="selectedNetwork.showLabels" id="showLabels"
            (click)="toggleLabels(!selectedNetwork.showLabels)">
     <label class="form-check-label" for="showLabels">
