--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -47,6 +47,15 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
+  <div *ngIf="showFileElementCountTooBig" class="alert alert-warning alert-dismissible" role="alert">
+    <h5>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT' | translate}}</h5>
+    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES' | translate}}: <b [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{nodeCount}}</b></p>
+    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES' | translate}}: <b [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{edgeCount}}</b></p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
 
   <h5>{{'SIDEBAR_MANAGE_REMOTE_FILE_LABEL'|translate}}</h5>
   <div class="row mb-3">
