--- a/src/app/components/main-graph/main-graph.component.html
+++ b/src/app/components/main-graph/main-graph.component.html
@@ -1,7 +1,7 @@
 <h1>
   <span class="mr-5">{{'MAIN_GRAPH_TITLE' | translate}}</span>
-  <button class="btn btn-outline-success" (click)="graphService.fitGraph()"
-          data-toggle="tooltip" placement="bottom" ngbTooltip="{{'MAIN_GRAPH_TT_FIT' | translate}}"
+  <button (click)="graphService.fitGraph()" class="btn btn-outline-success"
+          data-toggle="tooltip" ngbTooltip="{{'MAIN_GRAPH_TT_FIT' | translate}}" placement="bottom"
   >{{'MAIN_GRAPH_BTN_FIT' | translate}}</button>
 </h1>
 
