--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -1,4 +1,7 @@
-<h1>{{'MAIN_INFO_TITLE' | translate}}</h1>
+<h1>
+  {{'MAIN_INFO_TITLE' | translate}}
+  <img src="assets/img/ndexedit_logo.png" class="float-right mt-2" [ngStyle]="{'width.px': 75}">
+</h1>
 
 <hr>
 
