--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -6,9 +6,9 @@
     <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
   </div>
 
-  <div class="form-check mb-2" *ngIf="showLabelCheckbox">
-    <input class="form-check-input" type="checkbox" [checked]="selectedNetwork.showLabels" id="showLabels"
-           (click)="toggleLabels(!selectedNetwork.showLabels)">
+  <div *ngIf="showLabelCheckbox" class="form-check mb-2">
+    <input (click)="toggleLabels(!selectedNetwork.showLabels)" [checked]="selectedNetwork.showLabels" class="form-check-input" id="showLabels"
+           type="checkbox">
     <label class="form-check-label" for="showLabels">
       {{'SIDEBAR_EDIT_CB_LABELS' | translate}}
     </label>
@@ -23,13 +23,13 @@
         <b>{{attribute}}</b>
       </a>
     </h5>
-    <canvas id="mappingsChart" baseChart
-            [chartType]="'line'"
-            [legend]="true"
+    <canvas [chartType]="'line'" [colors]="lineChartColors"
             [datasets]="lineChartData"
             [labels]="lineChartLabels"
-            [colors]="lineChartColors"
-            [options]="lineChartOptions"></canvas>
+            [legend]="true"
+            [options]="lineChartOptions"
+            baseChart
+            id="mappingsChart"></canvas>
   </div>
 
   <!-- color gradient for continuous mappings -->
@@ -41,7 +41,7 @@
         <b>{{attribute}}</b>
       </a>
     </h5>
-    <div [style.width.%]="100" [style.height.px]="200" [style.background]="gradientBackground" class="mb-3">
+    <div [style.background]="gradientBackground" [style.height.px]="200" [style.width.%]="100" class="mb-3">
     </div>
   </div>
 
@@ -52,14 +52,14 @@
     <!-- Display selected nodes -->
     <h5 *ngIf="graphService.selectedElements.nodes.length > 0">{{'SIDEBAR_EDIT_COMPARISON_NODES' | translate}}</h5>
 
-    <div class="table-responsive" *ngIf="graphService.selectedElements.nodes.length > 0">
+    <div *ngIf="graphService.selectedElements.nodes.length > 0" class="table-responsive">
       <table class="table table-bordered">
         <tr>
           <td>&nbsp;</td>
           <td *ngFor="let node of graphService.selectedElements.nodes">
-            <a role="button" (click)="graphService.highlightByElementId(node.id)"
-               data-toggle="tooltip" placement="left"
-               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}">
+            <a (click)="graphService.highlightByElementId(node.id)" data-toggle="tooltip"
+               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}" placement="left"
+               role="button">
               <b>{{node.name}} ({{node.id}})</b>
             </a>
           </td>
@@ -78,14 +78,14 @@
     <!-- Display selected edges -->
     <h5 *ngIf="graphService.selectedElements.edges.length > 0">{{'SIDEBAR_EDIT_COMPARISON_EDGES' | translate}}</h5>
 
-    <div class="table-responsive" *ngIf="graphService.selectedElements.edges.length > 0">
+    <div *ngIf="graphService.selectedElements.edges.length > 0" class="table-responsive">
       <table class="table table-bordered">
         <tr>
           <td>&nbsp;</td>
           <td *ngFor="let edge of graphService.selectedElements.edges">
-            <a role="button" (click)="graphService.highlightByElementId(edge.id)"
-               data-toggle="tooltip" placement="left"
-               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE' | translate}} {{edge.id}}">
+            <a (click)="graphService.highlightByElementId(edge.id)" data-toggle="tooltip"
+               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE' | translate}} {{edge.id}}" placement="left"
+               role="button">
               <b>{{edge.name}} ({{edge.id}})</b>
             </a>
           </td>
@@ -106,25 +106,25 @@
   </div>
 
 
-  <div class="nav nav-pills flex-row" id="editsNav" role="tablist" aria-orientation="horizontal">
-    <a class="nav-link active" id="editsNavAspects" data-toggle="pill" href="#editsNavAspectsContent" role="tab"
-       aria-controls="editsNavAspects" aria-selected="false">{{'SIDEBAR_EDIT_ATTRIBUTES_TITLE' | translate}}</a>
-    <a class="nav-link" id="editsNavStyles" data-toggle="pill" href="#editsNavStylesContent" role="tab"
-       aria-controls="editsNavStyles" aria-selected="false">{{'SIDEBAR_EDIT_STYLE_TITLE' | translate}}</a>
-    <a class="nav-link" id="editsNavHighlights" data-toggle="pill" href="#editsNavHighlightsContent" role="tab"
-       aria-controls="editsNavHighlights" aria-selected="true">{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</a>
+  <div aria-orientation="horizontal" class="nav nav-pills flex-row" id="editsNav" role="tablist">
+    <a aria-controls="editsNavAspects" aria-selected="false" class="nav-link active" data-toggle="pill" href="#editsNavAspectsContent"
+       id="editsNavAspects" role="tab">{{'SIDEBAR_EDIT_ATTRIBUTES_TITLE' | translate}}</a>
+    <a aria-controls="editsNavStyles" aria-selected="false" class="nav-link" data-toggle="pill" href="#editsNavStylesContent"
+       id="editsNavStyles" role="tab">{{'SIDEBAR_EDIT_STYLE_TITLE' | translate}}</a>
+    <a aria-controls="editsNavHighlights" aria-selected="true" class="nav-link" data-toggle="pill" href="#editsNavHighlightsContent"
+       id="editsNavHighlights" role="tab">{{'SIDEBAR_EDIT_EDITING_TITLE' | translate}}</a>
 
   </div>
 
   <div class="tab-content p-2" id="editsNavContent">
 
     <!-- Edit: Aspects -->
-    <div class="tab-pane fade show active" id="editsNavAspectsContent" role="tabpanel"
-         aria-labelledby="editsNavAspects">
+    <div aria-labelledby="editsNavAspects" class="tab-pane fade show active" id="editsNavAspectsContent"
+         role="tabpanel">
 
-      <button class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip" placement="bottom"
+      <button [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, -1]} }]" class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip"
               ngbTooltip="{{'SIDEBAR_EDIT_TT_MANAGE_MAPPINGS' | translate}}"
-              [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, -1]} }]">
+              placement="bottom">
         <fa-icon [icon]="" class="mr-2"></fa-icon>
         {{'SIDEBAR_EDIT_MANAGE_MAPPINGS' | translate}}
       </button>
@@ -134,12 +134,12 @@
         {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
       </h5>
 
-      <table class="table table-bordered"
-             *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0">
+      <table *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0"
+             class="table table-bordered">
         <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
           <td>
-            <a role="button"
-               [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]">
+            <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]"
+               role="button">
               <b>{{nodeMap.classifier}}</b>
             </a>
           </td>
@@ -151,9 +151,9 @@
               </tr>
               <tr *ngFor="let value of nodeMap.values; let i = index">
                 <td class="border-right">
-                  <a role="button" (click)="graphService.highlightBySelector(nodeMap.selectors[i])"
-                     data-toggle="tooltip" placement="left"
-                     ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}"><b>{{value}}</b>
+                  <a (click)="graphService.highlightBySelector(nodeMap.selectors[i])" data-toggle="tooltip"
+                     ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{nodeMap.selectors[i]}}" placement="left"
+                     role="button"><b>{{value}}</b>
                   </a>
                 </td>
                 <td *ngFor="let style of nodeMap.styleMap">
@@ -162,8 +162,8 @@
                       <span *ngIf="style.selectors[k] == nodeMap.selectors[i]">
                         {{cssValue}}
                         <span *ngIf="cssValue && cssValue.toString().indexOf('#') === 0"
-                              class="badge badge-pill border"
-                              [ngStyle]="{'background-color': cssValue}">&nbsp;
+                              [ngStyle]="{'background-color': cssValue}"
+                              class="badge badge-pill border">&nbsp;
                         </span>
                       </span>
                     </span>
@@ -176,18 +176,18 @@
         </tr>
       </table>
 
-      <ul class="list-group"
-          *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0">
+      <ul *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0"
+          class="list-group">
       <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous; let index = index">
-        <li class="list-group-item" *ngIf="nodeMap.chartValid">
-          <a role="button" (click)="displayMapping(nodeMap.chart, [], 'nc' + index)">
+        <li *ngIf="nodeMap.chartValid" class="list-group-item">
+          <a (click)="displayMapping(nodeMap.chart, [], 'nc' + index)" role="button">
             <b>{{nodeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b> {{nodeMap.title[1]}}</b>
           </a>
         </li>
-        <li class="list-group-item" *ngIf="nodeMap.gradientValid">
-          <a role="button" (click)="displayMapping(null, nodeMap.colorGradient, 'nc' + index)">
+        <li *ngIf="nodeMap.gradientValid" class="list-group-item">
+          <a (click)="displayMapping(null, nodeMap.colorGradient, 'nc' + index)" role="button">
             <b>{{nodeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b> {{nodeMap.title[1]}}</b>
@@ -199,12 +199,12 @@
       <h5
         *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.edgesDiscrete || selectedNetwork.mappings.edgesContinuous) && (selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
 
-      <table class="table table-bordered"
-             *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0">
+      <table *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0"
+             class="table table-bordered">
         <tr *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
           <td>
-            <a role="button"
-               [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]">
+            <a [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]"
+               role="button">
               <b>{{edgeMap.classifier}}</b>
             </a>
           </td>
@@ -216,17 +216,17 @@
               </tr>
               <tr *ngFor="let value of edgeMap.values; let i = index">
                 <td class="border-right">
-                  <a role="button" (click)="graphService.highlightBySelector(edgeMap.selectors[i])"
-                     data-toggle="tooltip" placement="left"
-                     ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{edgeMap.selectors[i]}}"><b>{{value}}</b></a>
+                  <a (click)="graphService.highlightBySelector(edgeMap.selectors[i])" data-toggle="tooltip"
+                     ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{edgeMap.selectors[i]}}" placement="left"
+                     role="button"><b>{{value}}</b></a>
                 </td>
                 <td *ngFor="let style of edgeMap.styleMap">
                 <span *ngIf="style.cssValues.length > i">
 
                   {{style.cssValues[i]}}
                   <span *ngIf="style.cssValues && style.cssValues[i].toString().indexOf('#') === 0"
-                        class="badge badge-pill border"
-                        [ngStyle]="{'background-color': style.cssValues[i]}">&nbsp;
+                        [ngStyle]="{'background-color': style.cssValues[i]}"
+                        class="badge badge-pill border">&nbsp;
                   </span>
 
                 </span>
@@ -237,18 +237,18 @@
         </tr>
       </table>
 
-      <ul class="list-group"
-          *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0">
+      <ul *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0"
+          class="list-group">
       <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous; let index = index">
-        <li class="list-group-item" *ngIf="edgeMap.chartValid">
-          <a role="button" (click)="displayMapping(edgeMap.chart, [], 'ec' + index)">
+        <li *ngIf="edgeMap.chartValid" class="list-group-item">
+          <a (click)="displayMapping(edgeMap.chart, [], 'ec' + index)" role="button">
             <b>{{edgeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b>{{edgeMap.title[1]}}</b>
           </a>
         </li>
-        <li class="list-group-item" *ngIf="edgeMap.gradientValid">
-          <a role="button" (click)="displayMapping(null, edgeMap.colorGradient, 'ec' + index)">
+        <li *ngIf="edgeMap.gradientValid" class="list-group-item">
+          <a (click)="displayMapping(null, edgeMap.colorGradient, 'ec' + index)" role="button">
             <b>{{edgeMap.title[0]}}</b>
             {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
             <b>{{edgeMap.title[1]}}</b>
@@ -261,7 +261,7 @@
     </div>
 
     <!-- Edit: Styles -->
-    <div class="tab-pane fade" id="editsNavStylesContent" role="tabpanel" aria-labelledby="editsNavStyles">
+    <div aria-labelledby="editsNavStyles" class="tab-pane fade" id="editsNavStylesContent" role="tabpanel">
 
       <div class="row border-bottom">
         <div class="col">
@@ -271,17 +271,17 @@
           <b>{{'SIDEBAR_EDIT_TH_CSS_KEY' | translate}}</b>: {{'SIDEBAR_EDIT_TH_CSS_VALUE' | translate}}
         </div>
       </div>
-      <div class="row border-bottom" *ngFor="let s of selectedNetwork.style">
+      <div *ngFor="let s of selectedNetwork.style" class="row border-bottom">
         <div class="col">
-          <a role="button" (click)="graphService.highlightBySelector(s.selector)"
-             data-toggle="tooltip" placement="left"
-             ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{s.selector}}">{{s.selector}}</a>
+          <a (click)="graphService.highlightBySelector(s.selector)" data-toggle="tooltip"
+             ngbTooltip="{{'SIDEBAR_EDIT_TT_SELECTOR' | translate}} {{s.selector}}" placement="left"
+             role="button">{{s.selector}}</a>
         </div>
         <div class="col">
             <span *ngFor="let css of s.style|keyvalue">
               <b>{{css.key}}</b>: {{css.value}}
-              <span *ngIf="css.value && css.value.toString().indexOf('#') === 0" class="badge badge-pill border"
-                    [ngStyle]="{'background-color': css.value}">&nbsp;
+              <span *ngIf="css.value && css.value.toString().indexOf('#') === 0" [ngStyle]="{'background-color': css.value}"
+                    class="badge badge-pill border">&nbsp;
               </span>
               <br>
             </span>
@@ -290,11 +290,11 @@
     </div>
 
     <!-- Edit: Highlight color -->
-    <div class="tab-pane fade" id="editsNavHighlightsContent" role="tabpanel"
-         aria-labelledby="editsNavHighlights">
+    <div aria-labelledby="editsNavHighlights" class="tab-pane fade" id="editsNavHighlightsContent"
+         role="tabpanel">
 
-      <div class="alert alert-success" role="alert" id="test">
-        <fa-icon class="mr-2" [icon]="faPalette"></fa-icon>
+      <div class="alert alert-success" id="test" role="alert">
+        <fa-icon [icon]="faPalette" class="mr-2"></fa-icon>
         <b>{{'SIDEBAR_EDIT_TOAST_UPDATE' | translate}}</b>
         <hr>
         <b>{{'SIDEBAR_EDIT_TOAST_NODES' | translate}}</b> {{highlightNodes}}<br>
@@ -305,9 +305,9 @@
       <div class="form-row">
 
         <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
-        <input type="text" class="form-control mb-2 col-10" id="highlightNodesHex" name="highlightNodesHex"
-               placeholder="#0000ff" [(ngModel)]="highlightNodes">
-        <span class="ml-2 mb-2 col badge badge-pill border" [ngStyle]="{'background-color': highlightNodes}">
+        <input [(ngModel)]="highlightNodes" class="form-control mb-2 col-10" id="highlightNodesHex" name="highlightNodesHex"
+               placeholder="#0000ff" type="text">
+        <span [ngStyle]="{'background-color': highlightNodes}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
         </span>
 
@@ -315,20 +315,20 @@
       <div class="form-row">
 
         <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
-        <input type="text" class="form-control mb-2 col-10" id="highlightEdgesHex" name="highlightEdgesHex"
-               placeholder="#ff00ff" [(ngModel)]="highlightEdges">
-        <span class="ml-2 mb-2 col badge badge-pill border" [ngStyle]="{'background-color': highlightEdges}">
+        <input [(ngModel)]="highlightEdges" class="form-control mb-2 col-10" id="highlightEdgesHex" name="highlightEdgesHex"
+               placeholder="#ff00ff" type="text">
+        <span [ngStyle]="{'background-color': highlightEdges}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
         </span>
       </div>
       <div class="form-row">
         <label for="highlightDuration">{{'SIDEBAR_EDIT_LABEL_DURATION' | translate}}</label>
-        <input type="number" min="0" step="100" class="form-control mb-2" id="highlightDuration"
-               name="highlightDuration"
-               placeholder="2000" [(ngModel)]="highlightDuration">
+        <input [(ngModel)]="highlightDuration" class="form-control mb-2" id="highlightDuration" min="0" name="highlightDuration"
+               placeholder="2000"
+               step="100" type="number">
 
-        <button type="button" class="btn btn-outline-success btn-block mb-3"
-                (click)="setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)">
+        <button (click)="setHighlightColorAndDuration(highlightNodes, highlightEdges, highlightDuration)" class="btn btn-outline-success btn-block mb-3"
+                type="button">
           {{'SIDEBAR_EDIT_BTN_SUBMIT' | translate}}</button>
 
       </div>
