--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -6,19 +6,19 @@
     <tr *ngFor="let network of dataService.networksParsed" class="border-bottom">
       <td class="text-left">{{network.networkInformation.name}}</td>
       <td class="text-nowrap text-right">
-        <a class="btn btn-sm btn-outline-secondary mr-1" role="button" data-toggle="tooltip"
-           placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_INFO'|translate}}"
-           [routerLink]="['', { outlets: {primary: ['stats', network.id]} }]">
+        <a [routerLink]="['', { outlets: {primary: ['stats', network.id]} }]" class="btn btn-sm btn-outline-secondary mr-1" data-toggle="tooltip"
+           ngbTooltip="{{'SIDEBAR_MANAGE_TT_INFO'|translate}}" placement="left"
+           role="button">
           <fa-icon [icon]="faInfo"></fa-icon>
         </a>
-        <a class="btn btn-sm btn-outline-success mr-1" role="button" data-toggle="tooltip"
-           placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_EDIT'|translate}}"
-           [routerLink]="['', { outlets: {primary: ['graph', network.id], sidebar: ['edit', network.id]} }]">
+        <a [routerLink]="['', { outlets: {primary: ['graph', network.id], sidebar: ['edit', network.id]} }]" class="btn btn-sm btn-outline-success mr-1" data-toggle="tooltip"
+           ngbTooltip="{{'SIDEBAR_MANAGE_TT_EDIT'|translate}}" placement="left"
+           role="button">
           <fa-icon [icon]="faPaintBrush"></fa-icon>
         </a>
-        <a class="btn btn-sm btn-outline-info" role="button" data-toggle="tooltip"
-           placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_DOWNLOAD'|translate}}"
-           (click)="reconvert(network.id)">
+        <a (click)="reconvert(network.id)" class="btn btn-sm btn-outline-info" data-toggle="tooltip"
+           ngbTooltip="{{'SIDEBAR_MANAGE_TT_DOWNLOAD'|translate}}" placement="left"
+           role="button">
           <fa-icon [icon]="faFileDownload"></fa-icon>
         </a>
       </td>
@@ -29,29 +29,31 @@
     <h5>{{'SIDEBAR_MANAGE_FILE_SIZE_TOO_LARGE' | translate}}</h5>
     <p><b>{{'SIDEBAR_MANAGE_FILE_SIZE_LABEL_CURRENT' | translate}}</b>: ~ {{currentFileSize}} MB</p>
     <p><b>{{'SIDEBAR_MANAGE_FILE_SIZE_LABEL_MAX' | translate}}</b>: {{sizeLimit}} MB</p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div *ngIf="showFileSizeOkAlert" class="alert alert-success alert-dismissible" role="alert">
     <h5>{{'SIDEBAR_MANAGE_FILE_SIZE_OK' | translate}}</h5>
     <p><b>{{'SIDEBAR_MANAGE_FILE_SIZE_LABEL_CURRENT' | translate}}</b>: ~ {{currentFileSize}} MB</p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div *ngIf="showFileNotValidAlert" class="alert alert-danger alert-dismissible" role="alert">
     <h5>{{'SIDEBAR_MANAGE_FILE_TYPE_ERROR' | translate}}</h5>
     <p>{{'SIDEBAR_MANAGE_FILE_TYPE_LABEL' | translate}}: <b>".{{invalidExtension}}"</b></p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div *ngIf="showFileElementCountTooBig" class="alert alert-warning alert-dismissible" role="alert">
     <h5>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT' | translate}}</h5>
-    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES' | translate}}: <b [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{nodeCount}}</b></p>
-    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES' | translate}}: <b [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{edgeCount}}</b></p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES' | translate}}: <b
+      [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{nodeCount}}</b></p>
+    <p>{{'SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES' | translate}}: <b
+      [ngStyle]="{color: nodeCount > elementLimit ? '#ff9900' : '#856404'}">{{edgeCount}}</b></p>
+    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -65,14 +67,14 @@
   </h5>
   <div class="row mb-3">
     <div class="col-9 form-group mb-2">
-      <input type="text" class="form-control" id="remoteNetworkFile" aria-describedby="remoteNetworkHelp"
-             placeholder="{{'SIDEBAR_MANAGE_REMOTE_FILE_EXAMPLE'|translate}}" [(ngModel)]="ndexLinkToUpload">
-      <small id="remoteNetworkHelp" class="form-text text-muted">{{'SIDEBAR_MANAGE_REMOTE_FILE_TIP'|translate}}</small>
+      <input [(ngModel)]="ndexLinkToUpload" aria-describedby="remoteNetworkHelp" class="form-control" id="remoteNetworkFile"
+             placeholder="{{'SIDEBAR_MANAGE_REMOTE_FILE_EXAMPLE'|translate}}" type="text">
+      <small class="form-text text-muted" id="remoteNetworkHelp">{{'SIDEBAR_MANAGE_REMOTE_FILE_TIP'|translate}}</small>
     </div>
     <div class="col-3">
-      <button class="btn btn-block btn-outline-success" type="button" [disabled]="loadingHttp"
-              data-toggle="tooltip" placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_REMOTE_FILES' | translate}}"
-              (click)="importFromNdex()">
+      <button (click)="importFromNdex()" [disabled]="loadingHttp" class="btn btn-block btn-outline-success"
+              data-toggle="tooltip" ngbTooltip="{{'SIDEBAR_MANAGE_TT_REMOTE_FILES' | translate}}" placement="left"
+              type="button">
         {{'SIDEBAR_MANAGE_REMOTE_FILE_BTN'|translate}}
       </button>
     </div>
@@ -87,20 +89,20 @@
 
   <div class="input-group mb-3">
     <div class="custom-file">
-      <input type="file" class="custom-file-input" id="localNetworkFile" (change)="setAndValidateFile($event)">
-      <label for="localNetworkFile" class="custom-file-label">{{'SIDEBAR_MANAGE_LOCAL_FILE_LABEL'|translate}}</label>
+      <input (change)="setAndValidateFile($event)" class="custom-file-input" id="localNetworkFile" type="file">
+      <label class="custom-file-label" for="localNetworkFile">{{'SIDEBAR_MANAGE_LOCAL_FILE_LABEL'|translate}}</label>
     </div>
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" [disabled]="loadingFile"
-              data-toggle="tooltip" placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_LOCAL_FILE' | translate}}"
-              (click)="importLocalFile()">
+      <button (click)="importLocalFile()" [disabled]="loadingFile" class="btn btn-outline-secondary"
+              data-toggle="tooltip" ngbTooltip="{{'SIDEBAR_MANAGE_TT_LOCAL_FILE' | translate}}" placement="left"
+              type="button">
         {{'SIDEBAR_MANAGE_LOCAL_FILE_BTN'|translate}}
       </button>
     </div>
   </div>
 
-  <a class="mb-3 btn btn-block btn-outline-danger" role="button" [routerLink]="['', { outlets: {primary: ['info']} }]"
-     data-toggle="tooltip" placement="bottom" ngbTooltip="{{'SIDEBAR_MANAGE_TT_HELP' | translate}}">
+  <a [routerLink]="['', { outlets: {primary: ['info']} }]" class="mb-3 btn btn-block btn-outline-danger" data-toggle="tooltip"
+     ngbTooltip="{{'SIDEBAR_MANAGE_TT_HELP' | translate}}" placement="bottom" role="button">
     {{'SIDEBAR_MANAGE_HELP'|translate}}
   </a>
 </div>
